change cruds dir

--- a/Dockerfiles/bot/Dockerfile
+++ b/Dockerfiles/bot/Dockerfile
@@ -9,7 +9,7 @@ RUN apt update && \
     nano \
     tzdata
 
-ADD web/requirements.txt /app/requirements.txt
+ADD bot/requirements.txt /app/requirements.txt
 
 RUN pip install --upgrade pip && \
     pip install --no-cache-dir --upgrade -r /app/requirements.txt
@@ -17,4 +17,4 @@ RUN pip install --upgrade pip && \
 ADD db/requirements.txt /db/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /db/requirements.txt
 
-CMD ["uvicorn", "main:app", "--reload", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["/app/bot.sh"]
